# EchoBox-II

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: backgroundwidget.cpp  backgroundwidget.h  discordrpc.cpp  discordrpc.h  icons.h  libraryscanner.cpp  libraryscanner.h  logo.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  visualizer.cpp  visualizer.h  waveformslider.cpp  waveformslider.h
